--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -41,6 +41,16 @@ p {
   padding: 0 16px;
 }
 
+.btn-main {
+  background-color: rgba(18, 32, 45, 1);
+  padding: 6px 28px;
+  font-family: Nunito Sans;
+  font-weight: 600;
+  font-size: 16px;
+  color: rgba(255, 255, 255, 1);
+  border-bottom: 2px solid rgba(220, 182, 90, 1);
+}
+
 @media screen and (max-width: 768px) {
   h1 {
     font-size: $h1-size-medium;
