Adaptive for the main page

--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -12,11 +12,71 @@
         margin-bottom: 16px;
 
         .About-Desc {
-          height: 88px;
           font-family: Nunito Sans;
           font-weight: 400;
           font-size: 18px;
           margin-bottom: 16px;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .container-About {
+    margin: 0 auto;
+    padding: 0 68px;
+    margin-top: 100px;
+    .about-block {
+      display: flex;
+      flex-direction: column-reverse;
+      .About-Info {
+        width: 632px;
+        margin-top: 48px;
+        .About-Descs {
+          margin-bottom: 16px;
+
+          .About-Desc {
+            font-family: Nunito Sans;
+            font-weight: 400;
+            font-size: 18px;
+            margin-bottom: 16px;
+          }
+        }
+      }
+      .AboutPic-img {
+        width: 632px;
+        img {
+          width: 632px;
+        }
+      }
+    }
+  }
+}
+@media screen and (max-width: 360px) {
+  .container-About {
+    margin: 0 auto;
+    padding: 0 24px;
+    margin-top: 100px;
+    .about-block {
+      display: flex;
+      flex-direction: column-reverse;
+      .About-Info {
+        width: 312px;
+        .About-Descs {
+          display: flex;
+          flex-direction: column;
+          .About-Desc {
+            font-family: Nunito Sans;
+            font-weight: 400;
+            font-size: 16px;
+          }
+        }
+      }
+      .AboutPic-img {
+        width: 312px;
+        img {
+          width: 312px;
         }
       }
     }
