--- a/src/components/WideUsage/WideUsage.scss
+++ b/src/components/WideUsage/WideUsage.scss
@@ -7,7 +7,6 @@
     display: flex;
     gap: 38px;
     .WideUsage-obj {
-      width: 336px;
       .WideUsage-img {
         width: 88px;
         height: 88px;
@@ -17,26 +16,124 @@
         margin-bottom: 32px;
         align-content: center;
       }
-      .WideUsage-Name {
-        font-family: Nunito Sans;
-        font-weight: 500;
-        font-size: 20px;
-        width: 290px;
-        text-transform: uppercase;
-        color: rgba(34, 34, 34, 1);
-        margin-bottom: 16px;
-      }
-      .WideUsage-menu {
-        margin: 0;
-        padding: 0;
-        padding-left: 15px;
-        .WideUsage-menu-items {
-          list-style: disc;
-          margin-bottom: 5px;
+      .WideUsage-block {
+        .WideUsage-Name {
           font-family: Nunito Sans;
-          font-weight: 400;
-          font-size: 16px;
+          font-weight: 500;
+          font-size: 20px;
+          width: 290px;
+          text-transform: uppercase;
           color: rgba(34, 34, 34, 1);
+          margin-bottom: 16px;
+        }
+        .WideUsage-menu {
+          margin: 0;
+          padding: 0;
+          padding-left: 15px;
+          .WideUsage-menu-items {
+            list-style: disc;
+            margin-bottom: 5px;
+            font-family: Nunito Sans;
+            font-weight: 400;
+            font-size: 16px;
+            color: rgba(34, 34, 34, 1);
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .container-WideUsage {
+    margin: 0 auto;
+    padding: 0 68px;
+    margin-top: 100px;
+    .WideUsage {
+      display: flex;
+      flex-direction: column;
+      width: 632px;
+      .WideUsage-obj {
+        display: flex;
+        gap: 20px;
+        .WideUsage-img {
+          background-color: rgba(18, 32, 45, 1);
+          border-radius: 100%;
+          padding: 20px 25px;
+          margin-bottom: 32px;
+          align-content: center;
+        }
+        .WideUsage-block {
+          .WideUsage-Name {
+            font-family: Nunito Sans;
+            font-weight: 500;
+            font-size: 20px;
+            width: 290px;
+            text-transform: uppercase;
+            color: rgba(34, 34, 34, 1);
+            margin-bottom: 16px;
+          }
+          .WideUsage-menu {
+            margin: 0;
+            padding: 0;
+            padding-left: 15px;
+            .WideUsage-menu-items {
+              list-style: disc;
+              margin-bottom: 5px;
+              font-family: Nunito Sans;
+              font-weight: 400;
+              font-size: 16px;
+              color: rgba(34, 34, 34, 1);
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 360px) {
+  .container-WideUsage {
+    margin: 0 auto;
+    padding: 0 24px;
+    margin-top: 100px;
+    .WideUsage {
+      display: flex;
+      flex-direction: column;
+      width: 312px;
+      .WideUsage-obj {
+        display: flex;
+        gap: 20px;
+        .WideUsage-img {
+          background-color: rgba(18, 32, 45, 1);
+          border-radius: 100%;
+          padding: 20px 25px;
+          margin-bottom: 32px;
+          align-content: center;
+        }
+        .WideUsage-block {
+          .WideUsage-Name {
+            font-family: Nunito Sans;
+            font-weight: 500;
+            font-size: 20px;
+            width: 290px;
+            text-transform: uppercase;
+            color: rgba(34, 34, 34, 1);
+            margin-bottom: 16px;
+          }
+          .WideUsage-menu {
+            margin: 0;
+            padding: 0;
+            padding-left: 15px;
+            .WideUsage-menu-items {
+              list-style: disc;
+              margin-bottom: 5px;
+              font-family: Nunito Sans;
+              font-weight: 400;
+              font-size: 16px;
+              color: rgba(34, 34, 34, 1);
+            }
+          }
         }
       }
     }
