Added a basket and favourites, with fully working functionality, and fixed previous bugs.

--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -1,3 +1,5 @@
+@import "../../styles/utils/variables";
+
 .container-About {
   max-width: 1072px;
   margin: 0 auto;
@@ -6,13 +8,14 @@
   .about-block {
     display: flex;
     justify-content: space-between;
+    margin-top: 32px;
     .About-Info {
       width: 512px;
       .About-Descs {
         margin-bottom: 16px;
 
         .About-Desc {
-          font-family: Nunito Sans;
+          font-family: $font-regular;
           font-weight: 400;
           font-size: 18px;
           margin-bottom: 16px;
@@ -37,7 +40,7 @@
           margin-bottom: 16px;
 
           .About-Desc {
-            font-family: Nunito Sans;
+            font-family: $font-regular;
             font-weight: 400;
             font-size: 18px;
             margin-bottom: 16px;
@@ -67,7 +70,7 @@
           display: flex;
           flex-direction: column;
           .About-Desc {
-            font-family: Nunito Sans;
+            font-family: $font-regular;
             font-weight: 400;
             font-size: 16px;
           }
