--- a/src/components/Advantages/Advantages.scss
+++ b/src/components/Advantages/Advantages.scss
@@ -1,3 +1,5 @@
+@import "../../styles/utils/variables";
+
 .Advantages-wrapper {
   margin-top: 160px;
   background-color: rgba(18, 32, 45, 1);
@@ -8,7 +10,7 @@
     padding: 64px 16px;
 
     .h2 {
-      font-family: "Nunito Sans", sans-serif;
+      font-family: $font-semibold;
       font-weight: 600;
       font-size: 32px;
       line-height: 1.2;
@@ -20,6 +22,7 @@
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(412px, 1fr));
       gap: 24px;
+      margin-top: 32px;
     }
 
     .Advantages-obj {
@@ -33,7 +36,7 @@
       }
 
       .Advantages-Name {
-        font-family: Nunito Sans;
+        font-family: $font-medium;
         font-weight: 500;
         font-size: 20px;
         text-transform: uppercase;
@@ -42,9 +45,6 @@
       }
 
       .Advantages-Desc {
-        font-family: Nunito Sans;
-        font-weight: 400;
-        font-size: 16px;
         color: rgba(255, 255, 255, 1);
       }
     }
