--- a/src/components/BestSellers/BestSellers.scss
+++ b/src/components/BestSellers/BestSellers.scss
@@ -1,3 +1,5 @@
+@import "../../styles/utils/variables";
+
 .container-BestSellers {
   max-width: 1072px;
   margin: 0 auto;
@@ -7,14 +9,17 @@
     display: flex;
     gap: 15px;
     flex-wrap: wrap;
+    margin-top: 32px;
     .BestSellers {
       align-items: stretch;
-      width: 336px;
-      flex-shrink: 0;
-      flex-grow: 0;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      min-height: 100%;
+      height: 490px;
       .BestSellers_top {
         margin-bottom: 23px;
-        // width: 336px;
+        width: 336px;
         .BestSellers_main-info {
           position: relative;
           margin-bottom: 20px;
@@ -38,7 +43,7 @@
             left: 19px;
             background-color: rgba(220, 182, 90, 1);
             padding: 2px 15px;
-            font-family: Nunito Sans;
+            font-family: $font-semibold;
             font-weight: 600;
             font-size: 20px;
             line-height: 100%;
@@ -82,7 +87,7 @@
               transition: background-image 0.2s ease-in-out;
 
               &:hover {
-                background-image: url("../../assets/img/heart.svg");
+                background-image: url("../../assets/img/Heartb.svg");
                 background-color: rgba(18, 32, 45, 1);
               }
             }
@@ -92,7 +97,7 @@
           display: flex;
           gap: 23px;
           margin-top: 10px;
-          font-family: Nunito Sans;
+          font-family: $font-medium;
           font-weight: 500;
           font-size: 14px;
           text-align: center;
@@ -107,13 +112,13 @@
             display: flex;
             gap: 12px;
             .BestSellers_price_main-price {
-              font-family: Nunito Sans;
+              font-family: $font-bold;
               font-weight: 700;
               font-size: 18px;
               color: rgba(34, 34, 34, 1);
             }
             .BestSellers_price_old-price {
-              font-family: Nunito Sans;
+              font-family: $font-medium;
               font-weight: 500;
               font-size: 18px;
               text-decoration: line-through;
@@ -136,7 +141,7 @@
           display: flex;
           justify-content: space-between;
           a {
-            font-family: Nunito Sans;
+            font-family: $font-medium;
             font-weight: 500;
             font-size: 16px;
             line-height: 100%;
@@ -241,7 +246,7 @@
             display: flex;
             gap: 20px;
             margin-top: 12px;
-            font-family: Nunito Sans;
+            font-family: $font-medium;
             font-weight: 500;
             font-size: 14px;
             text-align: center;
@@ -256,13 +261,13 @@
               display: flex;
               gap: 12px;
               .BestSellers_price_main-price {
-                font-family: Nunito Sans;
+                font-family: $font-bold;
                 font-weight: 700;
                 font-size: 18px;
                 color: rgba(34, 34, 34, 1);
               }
               .BestSellers_price_old-price {
-                font-family: Nunito Sans;
+                font-family: $font-medium;
                 font-weight: 500;
                 font-size: 18px;
                 text-decoration: line-through;
@@ -288,7 +293,7 @@
             .btn-main {
               background-color: rgba(18, 32, 45, 1);
               padding: 6px 28px;
-              font-family: Nunito Sans;
+              font-family: $font-semibold;
               font-weight: 600;
               font-size: 16px;
               color: rgba(255, 255, 255, 1);
@@ -399,7 +404,7 @@
             display: flex;
             gap: 15px;
             margin-top: 8px;
-            font-family: Nunito Sans;
+            font-family: $font-medium;
             font-weight: 500;
             font-size: 10px;
             text-align: center;
@@ -414,12 +419,12 @@
               display: flex;
               gap: 12px;
               .BestSellers_price_main-price {
-                font-family: Nunito Sans;
+                font-family: $font-bold;
                 font-weight: 700;
                 font-size: 14px;
               }
               .BestSellers_price_old-price {
-                font-family: Nunito Sans;
+                font-family: $font-medium;
                 font-weight: 500;
                 font-size: 14px;
                 text-decoration: line-through;
@@ -441,7 +446,7 @@
           .BestSellers_action {
             margin-top: 12px;
             .btn-main {
-              font-family: Nunito Sans;
+              font-family: $font-semibold;
               font-weight: 600;
               font-size: 14px;
               padding: 6px 22px;
@@ -450,7 +455,7 @@
             }
             a {
               display: none;
-              font-family: Nunito Sans;
+              font-family: $font-medium;
               font-weight: 500;
               font-size: 16px;
               line-height: 100%;
