--- a/src/components/CardItem/CardItem.scss
+++ b/src/components/CardItem/CardItem.scss
@@ -1,3 +1,5 @@
+@import "../../styles/utils/variables";
+
 .container-productCard {
   max-width: 1072px;
   margin: 0 auto;
@@ -6,8 +8,14 @@
   .productCard-objs {
     display: flex;
     gap: 17px;
+    margin-top: 32px;
     .productCard {
       align-items: stretch;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      min-height: 100%;
+      height: 490px;
       .productCard_top {
         margin-bottom: 23px;
         .productCard_main-info {
@@ -27,7 +35,7 @@
             left: 19px;
             background-color: rgba(220, 182, 90, 1);
             padding: 2px 15px;
-            font-family: Nunito Sans;
+            font-family: $font-semibold;
             font-weight: 600;
             font-size: 20px;
             line-height: 100%;
@@ -72,7 +80,7 @@
               transition: background-image 0.2s ease-in-out;
 
               &:hover {
-                background-image: url("../../assets/img/heart.svg");
+                background-image: url("../../assets/img/Heartb.svg");
                 background-color: rgba(18, 32, 45, 1);
               }
             }
@@ -82,7 +90,7 @@
           display: flex;
           gap: 23px;
           margin-top: 10px;
-          font-family: Nunito Sans;
+          font-family: $font-medium;
           font-weight: 500;
           font-size: 14px;
           text-align: center;
@@ -97,13 +105,13 @@
             display: flex;
             gap: 12px;
             .productCard_price_main-price {
-              font-family: Nunito Sans;
+              font-family: $font-bold;
               font-weight: 700;
               font-size: 18px;
               color: rgba(34, 34, 34, 1);
             }
             .productCard_price_old-price {
-              font-family: Nunito Sans;
+              font-family: $font-medium;
               font-weight: 500;
               font-size: 18px;
               text-decoration: line-through;
@@ -129,13 +137,13 @@
           .btn-main {
             background-color: rgba(18, 32, 45, 1);
             padding: 6px 28px;
-            font-family: Nunito Sans;
+            font-family: $font-semibold;
             font-weight: 600;
             font-size: 16px;
             color: rgba(255, 255, 255, 1);
           }
           a {
-            font-family: Nunito Sans;
+            font-family: $font-medium;
             font-weight: 500;
             font-size: 16px;
             line-height: 100%;
@@ -184,7 +192,7 @@
               left: 18px;
               background-color: rgba(220, 182, 90, 1);
               padding: 2px 15px;
-              font-family: Nunito Sans;
+              font-family: $font-semibold;
               font-weight: 600;
               font-size: 20px;
               line-height: 100%;
@@ -239,7 +247,7 @@
             display: flex;
             gap: 20px;
             margin-top: 12px;
-            font-family: Nunito Sans;
+            font-family: $font-medium;
             font-weight: 500;
             font-size: 14px;
             text-align: center;
@@ -254,13 +262,13 @@
               display: flex;
               gap: 12px;
               .productCard_price_main-price {
-                font-family: Nunito Sans;
+                font-family: $font-bold;
                 font-weight: 700;
                 font-size: 18px;
                 color: rgba(34, 34, 34, 1);
               }
               .productCard_price_old-price {
-                font-family: Nunito Sans;
+                font-family: $font-medium;
                 font-weight: 500;
                 font-size: 18px;
                 text-decoration: line-through;
@@ -286,13 +294,13 @@
             .btn-main {
               background-color: rgba(18, 32, 45, 1);
               padding: 6px 28px;
-              font-family: Nunito Sans;
+              font-family: $font-semibold;
               font-weight: 600;
               font-size: 16px;
               color: rgba(255, 255, 255, 1);
             }
             a {
-              font-family: Nunito Sans;
+              font-family: $font-medium;
               font-weight: 500;
               font-size: 16px;
               line-height: 100%;
@@ -342,7 +350,7 @@
               left: 8px;
               background-color: rgba(220, 182, 90, 1);
               padding: 4px;
-              font-family: Nunito Sans;
+              font-family: $font-semibold;
               font-weight: 600;
               font-size: 12px;
               line-height: 100%;
@@ -397,7 +405,7 @@
             display: flex;
             gap: 15px;
             margin-top: 8px;
-            font-family: Nunito Sans;
+            font-family: $font-medium;
             font-weight: 500;
             font-size: 10px;
             text-align: center;
@@ -412,12 +420,12 @@
               display: flex;
               gap: 12px;
               .productCard_price_main-price {
-                font-family: Nunito Sans;
+                font-family: $font-bold;
                 font-weight: 700;
                 font-size: 14px;
               }
               .productCard_price_old-price {
-                font-family: Nunito Sans;
+                font-family: $font-medium;
                 font-weight: 500;
                 font-size: 14px;
                 text-decoration: line-through;
@@ -439,7 +447,7 @@
           .productCard_action {
             margin-top: 12px;
             .btn-main {
-              font-family: Nunito Sans;
+              font-family: $font-semibold;
               font-weight: 600;
               font-size: 14px;
               padding: 6px 22px;
@@ -448,7 +456,7 @@
             }
             a {
               display: none;
-              font-family: Nunito Sans;
+              font-family: $font-medium;
               font-weight: 500;
               font-size: 16px;
               line-height: 100%;
