--- a/src/components/ChoseProffesional/ChoseProffesional.scss
+++ b/src/components/ChoseProffesional/ChoseProffesional.scss
@@ -1,3 +1,5 @@
+@import "../../styles/utils/variables";
+
 .container-ChoseProffesional {
   max-width: 1072px;
   margin: 0 auto;
@@ -7,14 +9,14 @@
     display: flex;
     gap: 17px;
     align-items: stretch;
+    margin-top: 32px;
     .ChoseProffesional {
-      width: 336px;
-
+      align-items: stretch;
       display: flex;
       flex-direction: column;
-      flex-shrink: 0;
-      flex-grow: 1;
-      flex: 1;
+      justify-content: space-between;
+      min-height: 100%;
+      height: 490px;
       .ChoseProffesional_top {
         margin-bottom: 23px;
         .ChoseProffesional_main-info {
@@ -40,7 +42,7 @@
             left: 19px;
             background-color: rgba(220, 182, 90, 1);
             padding: 2px 15px;
-            font-family: Nunito Sans;
+            font-family: $font-semibold;
             font-weight: 600;
             font-size: 20px;
             line-height: 100%;
@@ -85,7 +87,7 @@
               transition: background-image 0.2s ease-in-out;
 
               &:hover {
-                background-image: url("../../assets/img/heart.svg");
+                background-image: url("../../assets/img/Heartb.svg");
                 background-color: rgba(18, 32, 45, 1);
               }
             }
@@ -95,7 +97,7 @@
           display: flex;
           gap: 23px;
           margin-top: 10px;
-          font-family: Nunito Sans;
+          font-family: $font-medium;
           font-weight: 500;
           font-size: 14px;
           text-align: center;
@@ -111,13 +113,13 @@
             display: flex;
             gap: 12px;
             .ChoseProffesional_price_main-price {
-              font-family: Nunito Sans;
+              font-family: $font-bold;
               font-weight: 700;
               font-size: 18px;
               color: rgba(34, 34, 34, 1);
             }
             .ChoseProffesional_price_old-price {
-              font-family: Nunito Sans;
+              font-family: $font-medium;
               font-weight: 500;
               font-size: 18px;
               text-decoration: line-through;
@@ -140,7 +142,7 @@
           display: flex;
           justify-content: space-between;
           a {
-            font-family: Nunito Sans;
+            font-family: $font-medium;
             font-weight: 500;
             font-size: 16px;
             line-height: 100%;
@@ -190,7 +192,7 @@
               left: 18px;
               background-color: rgba(220, 182, 90, 1);
               padding: 2px 15px;
-              font-family: Nunito Sans;
+              font-family: $font-semibold;
               font-weight: 600;
               font-size: 20px;
               line-height: 100%;
@@ -245,7 +247,7 @@
             display: flex;
             gap: 20px;
             margin-top: 12px;
-            font-family: Nunito Sans;
+            font-family: $font-medium;
             font-weight: 500;
             font-size: 14px;
             text-align: center;
@@ -260,13 +262,13 @@
               display: flex;
               gap: 12px;
               .ChoseProffesional_price_main-price {
-                font-family: Nunito Sans;
+                font-family: $font-bold;
                 font-weight: 700;
                 font-size: 18px;
                 color: rgba(34, 34, 34, 1);
               }
               .ChoseProffesional_price_old-price {
-                font-family: Nunito Sans;
+                font-family: $font-medium;
                 font-weight: 500;
                 font-size: 18px;
                 text-decoration: line-through;
@@ -292,13 +294,13 @@
             .btn-main {
               background-color: rgba(18, 32, 45, 1);
               padding: 6px 28px;
-              font-family: Nunito Sans;
+              font-family: $font-semibold;
               font-weight: 600;
               font-size: 16px;
               color: rgba(255, 255, 255, 1);
             }
             a {
-              font-family: Nunito Sans;
+              font-family: $font-medium;
               font-weight: 500;
               font-size: 16px;
               line-height: 100%;
@@ -348,7 +350,7 @@
               left: 8px;
               background-color: rgba(220, 182, 90, 1);
               padding: 4px;
-              font-family: Nunito Sans;
+              font-family: $font-semibold;
               font-weight: 600;
               font-size: 12px;
               line-height: 100%;
@@ -403,7 +405,7 @@
             display: flex;
             gap: 15px;
             margin-top: 8px;
-            font-family: Nunito Sans;
+            font-family: $font-medium;
             font-weight: 500;
             font-size: 10px;
             text-align: center;
@@ -418,12 +420,12 @@
               display: flex;
               gap: 12px;
               .ChoseProffesional_price_main-price {
-                font-family: Nunito Sans;
+                font-family: $font-bold;
                 font-weight: 700;
                 font-size: 14px;
               }
               .ChoseProffesional_price_old-price {
-                font-family: Nunito Sans;
+                font-family: $font-medium;
                 font-weight: 500;
                 font-size: 14px;
                 text-decoration: line-through;
@@ -445,7 +447,7 @@
           .ChoseProffesional_action {
             margin-top: 12px;
             .btn-main {
-              font-family: Nunito Sans;
+              font-family: $font-semibold;
               font-weight: 600;
               font-size: 14px;
               padding: 6px 22px;
@@ -454,7 +456,7 @@
             }
             a {
               display: none;
-              font-family: Nunito Sans;
+              font-family: $font-medium;
               font-weight: 500;
               font-size: 16px;
               line-height: 100%;
