--- a/src/components/SoMayLikePage/SoMayLike.scss
+++ b/src/components/SoMayLikePage/SoMayLike.scss
@@ -1,3 +1,5 @@
+@import "../../styles/utils/variables";
+
 .container-SoMayLike {
   max-width: 1072px;
   margin: 0 auto;
@@ -6,8 +8,14 @@
   .SoMayLike-objs {
     display: flex;
     gap: 17px;
+    margin-top: 32px;
     .SoMayLike {
       align-items: stretch;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      min-height: 100%;
+      height: 490px;
       .SoMayLike_top {
         margin-bottom: 23px;
         .SoMayLike_main-info {
@@ -32,7 +40,7 @@
             left: 19px;
             background-color: rgba(220, 182, 90, 1);
             padding: 2px 15px;
-            font-family: Nunito Sans;
+            font-family: $font-semibold;
             font-weight: 600;
             font-size: 20px;
             line-height: 100%;
@@ -76,7 +84,7 @@
               transition: background-image 0.2s ease-in-out;
 
               &:hover {
-                background-image: url("../../assets/img/heart.svg");
+                background-image: url("../../assets/img/Heartb.svg");
                 background-color: rgba(18, 32, 45, 1);
               }
             }
@@ -86,7 +94,7 @@
           display: flex;
           gap: 23px;
           margin-top: 10px;
-          font-family: Nunito Sans;
+          font-family: $font-medium;
           font-weight: 500;
           font-size: 14px;
           text-align: center;
@@ -102,13 +110,13 @@
           display: flex;
           gap: 12px;
           .SoMayLike_price_main-price {
-            font-family: Nunito Sans;
+            font-family: $font-bold;
             font-weight: 700;
             font-size: 18px;
             color: rgba(34, 34, 34, 1);
           }
           .SoMayLike_price_old-price {
-            font-family: Nunito Sans;
+            font-family: $font-medium;
             font-weight: 500;
             font-size: 18px;
             text-decoration: line-through;
@@ -131,7 +139,7 @@
         display: flex;
         justify-content: space-between;
         a {
-          font-family: Nunito Sans;
+          font-family: $font-medium;
           font-weight: 500;
           font-size: 16px;
           line-height: 100%;
@@ -179,7 +187,7 @@
               left: 18px;
               background-color: rgba(220, 182, 90, 1);
               padding: 2px 15px;
-              font-family: Nunito Sans;
+              font-family: $font-semibold;
               font-weight: 600;
               font-size: 20px;
               line-height: 100%;
@@ -234,7 +242,7 @@
             display: flex;
             gap: 20px;
             margin-top: 12px;
-            font-family: Nunito Sans;
+            font-family: $font-medium;
             font-weight: 500;
             font-size: 14px;
             text-align: center;
@@ -249,13 +257,13 @@
               display: flex;
               gap: 12px;
               .SoMayLike_price_main-price {
-                font-family: Nunito Sans;
+                font-family: $font-bold;
                 font-weight: 700;
                 font-size: 18px;
                 color: rgba(34, 34, 34, 1);
               }
               .SoMayLike_price_old-price {
-                font-family: Nunito Sans;
+                font-family: $font-medium;
                 font-weight: 500;
                 font-size: 18px;
                 text-decoration: line-through;
@@ -281,13 +289,13 @@
             .btn-main {
               background-color: rgba(18, 32, 45, 1);
               padding: 6px 28px;
-              font-family: Nunito Sans;
+              font-family: $font-semibold;
               font-weight: 600;
               font-size: 16px;
               color: rgba(255, 255, 255, 1);
             }
             a {
-              font-family: Nunito Sans;
+              font-family: $font-medium;
               font-weight: 500;
               font-size: 16px;
               line-height: 100%;
@@ -337,7 +345,7 @@
               left: 8px;
               background-color: rgba(220, 182, 90, 1);
               padding: 4px;
-              font-family: Nunito Sans;
+              font-family: $font-semibold;
               font-weight: 600;
               font-size: 12px;
               line-height: 100%;
@@ -392,7 +400,7 @@
             display: flex;
             gap: 15px;
             margin-top: 8px;
-            font-family: Nunito Sans;
+            font-family: $font-medium;
             font-weight: 500;
             font-size: 10px;
             text-align: center;
@@ -407,12 +415,12 @@
               display: flex;
               gap: 12px;
               .SoMayLike_price_main-price {
-                font-family: Nunito Sans;
+                font-family: $font-bold;
                 font-weight: 700;
                 font-size: 14px;
               }
               .SoMayLike_price_old-price {
-                font-family: Nunito Sans;
+                font-family: $font-medium;
                 font-weight: 500;
                 font-size: 14px;
                 text-decoration: line-through;
@@ -434,7 +442,7 @@
           .SoMayLike_action {
             margin-top: 12px;
             .btn-main {
-              font-family: Nunito Sans;
+              font-family: $font-semibold;
               font-weight: 600;
               font-size: 14px;
               padding: 6px 22px;
@@ -443,7 +451,7 @@
             }
             a {
               display: none;
-              font-family: Nunito Sans;
+              font-family: $font-medium;
               font-weight: 500;
               font-size: 16px;
               line-height: 100%;
