--- a/src/components/CardItem/CardItem.scss
+++ b/src/components/CardItem/CardItem.scss
@@ -26,7 +26,9 @@
             width: 336px;
             height: 278px;
             img {
-              height: 278px;
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
             }
           }
           .productCard_status {
