--- a/src/components/ChoseProffesional/ChoseProffesional.scss
+++ b/src/components/ChoseProffesional/ChoseProffesional.scss
@@ -30,6 +30,9 @@
             position: relative;
             overflow: hidden;
             img {
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
               position: absolute;
               bottom: 0;
               left: 50%;
