--- a/src/components/FavBusket/FavBusket.scss
+++ b/src/components/FavBusket/FavBusket.scss
@@ -21,6 +21,11 @@
             width: 160px;
             height: 160px;
             background-color: rgba(236, 236, 236, 1);
+            img {
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
+            }
           }
           .FavBusket-Blok-desc {
             .h3 {
@@ -73,6 +78,23 @@
             color: rgba(127, 127, 127, 1);
             margin-bottom: 12px;
           }
+          .FavBusket-Buttons {
+            margin-bottom: 14px;
+            margin-top: 12px;
+            width: 70px;
+            height: 30px;
+            display: flex;
+            background-color: rgba(236, 236, 236, 1);
+            .FavBusket-decrease {
+              width: 100%;
+            }
+            .FavBusket-increase {
+              width: 100%;
+            }
+            .FavBusket-Quantity {
+              align-content: center;
+            }
+          }
           .Del-Add {
             display: flex;
             gap: 20px;
@@ -88,6 +110,7 @@
               text-decoration-thickness: 0%;
               text-decoration-skip-ink: auto;
               color: rgba(34, 34, 34, 1);
+              align-self: end;
             }
             .btn {
               background-color: rgba(18, 32, 45, 1);
@@ -167,7 +190,6 @@
         text-align: right;
         text-decoration: underline;
         text-decoration-style: solid;
-        text-decoration-offset: 0%;
         text-decoration-thickness: 0%;
         text-decoration-skip-ink: auto;
       }
