--- a/src/components/NewProducts/NewProducts.scss
+++ b/src/components/NewProducts/NewProducts.scss
@@ -28,6 +28,9 @@
             height: 278px;
             position: relative;
             img {
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
               position: absolute;
               bottom: 0;
               left: 50%;
