--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -43,7 +43,7 @@ p {
 .btn-main {
   background-color: rgba(18, 32, 45, 1);
   padding: 6px 28px;
-  font-family: Nunito Sans;
+  font-family: $font-semibold;
   font-weight: 600;
   font-size: 16px;
   color: rgba(255, 255, 255, 1);
