Fix asset paths and lint issues

--- a/src/components/FilteredProducts/FilteredProducts.scss
+++ b/src/components/FilteredProducts/FilteredProducts.scss
@@ -139,7 +139,7 @@
             transition: background-image 0.2s ease-in-out;
 
             &:hover {
-              background-image: url("../../assets/img/Heartb.svg");
+              background-image: url("../../assets/img/heartb.svg");
               background-color: rgba(18, 32, 45, 1);
             }
           }
