--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -19,6 +19,10 @@
           font-weight: 400;
           font-size: 18px;
           margin-bottom: 16px;
+
+          p {
+            text-align: none;
+          }
         }
       }
     }
